@startuml
class com.example.chatapp_ui.controllers.RegisterController {
~ {static} Connection connection
~ {static} String DBName
~ {static} String DBurl
~ {static} String DBusername
~ {static} String DBpassword
- TextField username
- PasswordField password
- Label errorIGuess
+ void MainScreen(ActionEvent)
+ void register(ActionEvent)
}
class com.example.chatapp_ui.Client {
- String name
- Socket client
- BufferedReader clientInput
- PrintWriter clientOutput
- ChattingController controller
- boolean shutDown
+ void writeHistory(BufferedReader)
+ void run()
+ void shutdown()
}
class com.example.chatapp_ui.Client.InputHandler {
+ void sendMessage(String)
+ void run()
}
class com.example.chatapp_ui.controllers.LoginController {
+ TextField nickname
- TextField username
- PasswordField password
- Label errorIGuess
~ {static} Connection connection
~ {static} String DBName
~ {static} String DBurl
~ {static} String DBusername
~ {static} String DBpassword
+ TextField getNickname()
+ void nicknamePrompt(ActionEvent)
+ void show(ActionEvent)
+ void login(ActionEvent)
}
class com.example.chatapp_ui.ChatAppEXE {
+ void start(Stage)
+ {static} void main(String[])
}
class com.example.chatapp_ui.controllers.MainController {
+ void registerScene(ActionEvent)
+ void loginScene(ActionEvent)
}
class com.example.chatapp_ui.Server {
- ArrayList<ConnectionHandler> serverConnections
- ServerSocket serverHost
- boolean shutDown
- ExecutorService serverThreadPool
+ {static} void main(String[])
+ void run()
+ void sendToAllUsers(String)
+ void shutdown()
}
class com.example.chatapp_ui.Server.ConnectionHandler {
- Socket client
~ DateTimeFormatter dtf
~ LocalDateTime now
~ FileWriter fileWriter
~ BufferedWriter bufferedWriter
- BufferedReader inputReader
- PrintWriter outputReader
+ void run()
+ void sendMessage(String)
+ void shutdown()
}
class com.example.chatapp_ui.controllers.ChattingController {
- TextField message
- TextArea chat
- Client client
- Client.InputHandler inputHandler
+ void sendMessage(ActionEvent)
+ void closeWindow(ActionEvent)
+ void appendText(String)
+ void start(String)
~ void enterPress(KeyEvent)
}


com.example.chatapp_ui.Thread <|-- com.example.chatapp_ui.Client
com.example.chatapp_ui.Client +.. com.example.chatapp_ui.Client.InputHandler
com.example.chatapp_ui.Runnable <|.. com.example.chatapp_ui.Client.InputHandler
javafx.application.Application <|-- com.example.chatapp_ui.ChatAppEXE
com.example.chatapp_ui.Runnable <|.. com.example.chatapp_ui.Server
com.example.chatapp_ui.Server +.. com.example.chatapp_ui.Server.ConnectionHandler
com.example.chatapp_ui.Runnable <|.. com.example.chatapp_ui.Server.ConnectionHandler
@enduml